Fixed the issue with the z-index

--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -2,3 +2,8 @@
 .dropdown-toggle {
     cursor: pointer;
 }
+
+#dropdown {
+    position: absolute;
+    z-index: 99;
+}
