--- a/src/app/products/product-filter/product-filter.component.css
+++ b/src/app/products/product-filter/product-filter.component.css
@@ -1,4 +1,6 @@
 
 .sticky-top {
     top: 30px;
+    position: sticky;
+    z-index: 85;
 }
